+多语言，赛事2网页文字中英文支持

--- a/src/app/i18n/locales/en/translation.json
+++ b/src/app/i18n/locales/en/translation.json
@@ -3,5 +3,50 @@
   "title": "BeWater - I Build Therefore I Am",
   "blog": {
     "text": ""
+  },
+  "cryptoArt": {
+    "t1": "Event Partners",
+    "t2": "Co-hosts",
+    "t3": "Strategic Partners",
+    "t4": "Strategic Media & Communities",
+    "t5": "Event Rewards: ",
+    "t6": "Tracks",
+    "t7": "Stickers",
+    "t8": "Show your humor and creativity, there is no limit to the theme, recommended themes include \"self-cultivation of leeks\", \"walking in the bear market\", based on DeBox four NFT penguins, little eagles, little snakes, and little rabbits related to the life of cute animals, DeBox and Jokes related to film and television works, such as DeBox God of Gamblers, Stud, etc.",
+    "t9": "We recommend that contestants make emoticons in groups. A group contains about 4 emoticons, the more the better. Bonus points for emoticons made by hand instead of AI!",
+    "t10": "Show your personality and style, unlimited topics, recommended topics include \"PFP Reconstruction of Four DeBox NFTs\", \"Next Blue Chip PFP\", \"Image of Social PFP\". Additional points will be awarded for PFPs made by hand rather than AI.",
+    "t11": "When submitting a PFP, the designer needs to submit at least 4 PFPs of the same series and provide the corresponding disassembled components. At the same time, we hope that you can provide each PFP with relevant world views, stories, and interlude stories in the creation process, and give PFP works more connotation and meaning through the combination of text stories and PFP art.",
+    "t12": "For an introduction to fractal art, please refer to https://en.wikipedia.org/wiki/Fractal",
+    "t13": "Procedural generation is a must, and we encourage artists and programmers to collaborate to generate stunning artwork through procedural generation and explore the charm of fractal art.",
+    "t14": "Pixel Art",
+    "t15": "Show off your love for classic pixel art, with extra points for pixel art made by hand instead of AI.",
+    "t16": "Canvas size is limited to 16x16、32x32、64x64、128x128。",
+    "t17": "Additional Rewards",
+    "t18": "On-Chain Artwork: ",
+    "t19": "The top three artworks from each track will be minted as ERC-721 (NFT) tokens and added to the blockchain as part of the same collection. They will be eligible for future community-organized auctions, with all proceeds going directly to the designers.",
+    "t20": "Cash Prize and Tokens: ",
+    "t21": "DeBox will provide vDBX, along with sponsorship from various partners, including USDT, NFT whitelist, and platform-specific tokens. Stay tuned for more details.",
+    "t22": "Artwork Promotion: ",
+    "t23": "This event will collaborate with multiple partners to promote the participating artworks, offering exposure to an audience of hundreds of thousands.",
+    "t24": "Co-hosts"
+  },
+  "campaign": {
+    "t1": "Join / Create Team",
+    "t2": "Team information and project submission will be submitted on",
+    "t3": "open",
+    "t4": "Register Now",
+    "t5": "Introduction",
+    "t6": "Join our Telegram group",
+    "t7": "Follow Official Twitter",
+    "t8": "Adjudicators",
+    "t9": "More to be announced",
+    "t10": "Submission Requirements",
+    "t11": "Judging Criteria",
+    "t12": "Interested in a campaign? Form your dream team and join us",
+    "t13": "Join BeWater now to contribute to innovation with your own strength",
+    "t14": "Sign up now for China's first Starknet Workshop and contribute to innovation and change",
+    "t15": "Nearly 25,000 pre-registered developers and designers have already claimed their BeWater Early Bird badges",
+    "t16": "Workshops have limited seats on a first-come-first-served basis",
+    "t17": "Go to team page"
   }
 }
