--- a/src/app/i18n/locales/zh/translation.json
+++ b/src/app/i18n/locales/zh/translation.json
@@ -23,9 +23,9 @@
     "t16": "画布限定尺寸为 16x16、32x32、64x64、128x128。",
     "t17": "更多奖励",
     "t18": "作品上链：",
-    "t19": "HeartX 将帮助获奖艺术家将作品在以太坊上 layer2 的 ZK 链上认证和发行。",
+    "t19": "HeartX 将帮助1/1 Digital Art 赛道获奖艺术家将作品在以太坊上 layer2 的 ZK 链上认证和发行，其他赛道的前三名作品将以 ERC-721 (NFT) 形式上链，后续可通过社区组织相关的拍卖，获奖所得将全部提供给设计师。",
     "t20": "奖金和 Token：",
-    "t21": "每个赛道前三名将获得 DeBox 提供的 500vDBX、 HeartX 提供的 5000$HNX，其中在1/1 Digital Art 赛道入围的第四到第十名可以获得 3,000 $HNX的奖励。同时还有其他多个合作伙伴的赞助，包括 USDT、NFT 白名单以及对应平台 token，更多详情敬请期待。",
+    "t21": "每个赛道前三名将获得 DeBox 提供的 500vDBX、 HeartX 提供的 5,000$HNX，其中在1/1 Digital Art 赛道入围的第四到第十名可以获得 3,000 $HNX的奖励。同时还有其他多个合作伙伴的赞助，包括 USDT、NFT 白名单以及对应平台 token，更多详情敬请期待。",
     "t22": "作品推广：",
     "t23": "本次赛事将联合多个合作方进行宣传，为参赛作品提供十万量级的曝光。另外，在 1/1 Digital Art 赛道获奖的前三名艺术家的个人主页可以在 HeartX 平台获得首页 banner 曝光宣传24小时。",
     "t24": "赛事联合出品方"
