--- a/src/app/i18n/locales/en/translation.json
+++ b/src/app/i18n/locales/en/translation.json
@@ -28,7 +28,9 @@
     "t21": "Each of the top three projects in each track will receive 500vDBX provided by DeBox and 5,000$HNX provided by HeartX. Additionally, the fourth to tenth place winners in the 1/1 Digital Art track will receive a reward of 3,000$HNX. There are also sponsorships from several other partners, including USDT, NFT whitelist, and corresponding platform tokens. Stay tuned for more details.",
     "t22": "Artwork Promotion: ",
     "t23": "This event will collaborate with multiple partners to promote the participating artworks, offering exposure to an audience of hundreds of thousands.In addition, the top three artists in the 1/1 Digital Art track will have their personal pages featured on the HeartX platform's homepage banner for 24 hours.",
-    "t24": "Co-hosts"
+    "t24": "Co-hosts",
+    "t25": "1/1 Digital Art",
+    "t26": "Express your passion for digital art by creating captivating artworks with cryptographic elements. No limitations on form or medium. But they must be one-of-a-kind and have not been minted on any blockchain."
   },
   "campaign": {
     "t1": "Join / Create Team",
