--- a/src/app/i18n/locales/zh/translation.json
+++ b/src/app/i18n/locales/zh/translation.json
@@ -28,7 +28,9 @@
     "t21": "每个赛道前三名将获得 DeBox 提供的 500vDBX、 HeartX 提供的 5,000$HNX，其中在1/1 Digital Art 赛道入围的第四到第十名可以获得 3,000 $HNX的奖励。同时还有其他多个合作伙伴的赞助，包括 USDT、NFT 白名单以及对应平台 token，更多详情敬请期待。",
     "t22": "作品推广：",
     "t23": "本次赛事将联合多个合作方进行宣传，为参赛作品提供十万量级的曝光。另外，在 1/1 Digital Art 赛道获奖的前三名艺术家的个人主页可以在 HeartX 平台获得首页 banner 曝光宣传24小时。",
-    "t24": "赛事联合出品方"
+    "t24": "赛事联合出品方",
+    "t25": "1/1 Digital Art",
+    "t26": "展示你对digital art的理解与热爱，用艺术的思维来创作出具备加密特征的艺术作品为加分项。创作内容不限呈现形式，但需限定作品为1/1版数，且未在任何区块链下进行铸造过的原创作品。"
   },
   "campaign": {
     "t1": "加入 / 创建队伍",
