--- a/src/app/i18n/locales/en/translation.json
+++ b/src/app/i18n/locales/en/translation.json
@@ -20,7 +20,7 @@
     "t13": "Procedural generation is a must, and we encourage artists and programmers to collaborate to generate stunning artwork through procedural generation and explore the charm of fractal art.",
     "t14": "Pixel Art",
     "t15": "Show off your love for classic pixel art, with extra points for pixel art made by hand instead of AI.",
-    "t16": "Canvas size is limited to 16x16、32x32、64x64、128x128。",
+    "t16": "Canvas size is limited to 16x16, 32x32, 64x64, 128x128.",
     "t17": "Additional Rewards",
     "t18": "On-Chain Artwork: ",
     "t19": "HeartX will assist the winning artists in 1/1 Digital Art track to be verified at HeartX platform and minting their winning artworks on the zkSync, the layer2 of Ethereum.Other top three artworks from each track will be minted as ERC-721 (NFT) tokens. They will be eligible for future community-organized auctions, with all proceeds going directly to the designers.",
