--- a/src/app/i18n/locales/en/translation.json
+++ b/src/app/i18n/locales/en/translation.json
@@ -30,7 +30,8 @@
     "t23": "This event will collaborate with multiple partners to promote the participating artworks, offering exposure to an audience of hundreds of thousands.In addition, the top three artists in the 1/1 Digital Art track will have their personal pages featured on the HeartX platform's homepage banner for 24 hours.",
     "t24": "Co-hosts",
     "t25": "1/1 Digital Art",
-    "t26": "Express your passion for digital art by creating captivating artworks with cryptographic elements. No limitations on form or medium. But they must be one-of-a-kind and have not been minted on any blockchain."
+    "t26": "Express your passion for digital art by creating captivating artworks with cryptographic elements. No limitations on form or medium. But they must be one-of-a-kind and have not been minted on any blockchain.",
+    "t27": "Image size within 2MB to 20MB (JPG, PNG, GIF), video size up to 100MB (MP4)."
   },
   "campaign": {
     "t1": "Join / Create Team",
