--- a/src/app/i18n/locales/en/translation.json
+++ b/src/app/i18n/locales/en/translation.json
@@ -50,6 +50,7 @@
     "t14": "Sign up now for China's first Starknet Workshop and contribute to innovation and change",
     "t15": "Nearly 25,000 pre-registered developers and designers have already claimed their BeWater Early Bird badges",
     "t16": "Workshops have limited seats on a first-come-first-served basis",
-    "t17": "Go to team page"
+    "t17": "Go to team page",
+    "t18": "Join"
   }
 }
