--- a/src/app/i18n/locales/zh/translation.json
+++ b/src/app/i18n/locales/zh/translation.json
@@ -50,6 +50,7 @@
     "t14": "现在报名中国首届 Starknet Workshop，为创新和改变贡献出自己的力量",
     "t15": "已有近 25000 名预注册的开发者和设计师领取了 BeWater 早鸟徽章",
     "t16": "Workshop 现场名额有限，先到先得",
-    "t17": "前往队伍页面"
+    "t17": "前往队伍页面",
+    "t18": "加入 BeWater"
   }
 }
