--- a/src/app/i18n/locales/zh/translation.json
+++ b/src/app/i18n/locales/zh/translation.json
@@ -51,6 +51,7 @@
     "t15": "已有近 25000 名预注册的开发者和设计师领取了 BeWater 早鸟徽章",
     "t16": "Workshop 现场名额有限，先到先得",
     "t17": "前往队伍页面",
-    "t18": "加入 BeWater"
+    "t18": "加入 BeWater",
+    "t19": "奖项设置"
   }
 }
