--- a/src/app/i18n/locales/en/translation.json
+++ b/src/app/i18n/locales/en/translation.json
@@ -52,6 +52,7 @@
     "t16": "Workshops have limited seats on a first-come-first-served basis",
     "t17": "Go to team page",
     "t18": "Join",
-    "t19": "Rewards"
+    "t19": "Rewards",
+    "t20": "Join our DC channel"
   }
 }
