--- a/src/app/i18n/locales/zh/translation.json
+++ b/src/app/i18n/locales/zh/translation.json
@@ -39,7 +39,7 @@
     "t3": "开放",
     "t4": "立即报名",
     "t5": "活动简介",
-    "t6": "加入 Telegram 华语交流群",
+    "t6": "加入 Telegram 交流群",
     "t7": "关注官方 Twitter",
     "t8": "大赛评审团",
     "t9": "更多评委即将揭晓...",
@@ -52,6 +52,7 @@
     "t16": "Workshop 现场名额有限，先到先得",
     "t17": "前往队伍页面",
     "t18": "加入 BeWater",
-    "t19": "奖项设置"
+    "t19": "奖项设置",
+    "t20": "加入我们的 DC 频道"
   }
 }
