+优化逻辑，减少hack代码

--- a/src/app/i18n/locales/en/translation.json
+++ b/src/app/i18n/locales/en/translation.json
@@ -53,6 +53,11 @@
     "t17": "Go to team page",
     "t18": "Join",
     "t19": "Rewards",
-    "t20": "Join our DC channel"
+    "t20": "Join our DC channel",
+    "t21": "Core Sponsor",
+    "t22": "Secondary Sponsor",
+    "t23": "Tier 3 Sponsor",
+    "t24": "Sign up now for ",
+    "t25": " and contribute to innovation and change"
   }
 }
