--- a/src/app/i18n/locales/zh/translation.json
+++ b/src/app/i18n/locales/zh/translation.json
@@ -53,6 +53,11 @@
     "t17": "前往队伍页面",
     "t18": "加入 BeWater",
     "t19": "奖项设置",
-    "t20": "加入我们的 DC 频道"
+    "t20": "加入我们的 DC 频道",
+    "t21": "核心赞助方",
+    "t22": "二级赞助方",
+    "t23": "三级赞助方",
+    "t24": "现在报名“",
+    "t25": "”为创新和改变贡献出自己的力量"
   }
 }
