--- a/src/app/i18n/locales/en/translation.json
+++ b/src/app/i18n/locales/en/translation.json
@@ -58,6 +58,7 @@
     "t22": "Secondary Sponsor",
     "t23": "Tier 3 Sponsor",
     "t24": "Sign up now for ",
-    "t25": " and contribute to innovation and change"
+    "t25": " and contribute to innovation and change",
+    "t26": "Rewards"
   }
 }
