去除一部分hack代码

--- a/src/app/i18n/locales/en/translation.json
+++ b/src/app/i18n/locales/en/translation.json
@@ -59,6 +59,8 @@
     "t23": "Tier 3 Sponsor",
     "t24": "Sign up now for ",
     "t25": " and contribute to innovation and change",
-    "t26": "Rewards"
+    "t26": "Rewards",
+    "t27": "None",
+    "t28": "Event Details"
   }
 }
