--- a/src/app/i18n/locales/en/translation.json
+++ b/src/app/i18n/locales/en/translation.json
@@ -39,7 +39,7 @@
     "t3": "open",
     "t4": "Register Now",
     "t5": "Introduction",
-    "t6": "Join our Telegram group",
+    "t6": "Join our TG group",
     "t7": "Follow Official Twitter",
     "t8": "Adjudicators",
     "t9": "More to be announced",
@@ -61,6 +61,7 @@
     "t25": " and contribute to innovation and change",
     "t26": "Rewards",
     "t27": "None",
-    "t28": "Event Details"
+    "t28": "Event Details",
+    "t29": "Core Sponsor"
   }
 }
