--- a/src/app/i18n/locales/zh/translation.json
+++ b/src/app/i18n/locales/zh/translation.json
@@ -39,7 +39,7 @@
     "t3": "开放",
     "t4": "立即报名",
     "t5": "活动简介",
-    "t6": "加入 Telegram 交流群",
+    "t6": "加入 TG 交流群",
     "t7": "关注官方 Twitter",
     "t8": "大赛评审团",
     "t9": "更多评委即将揭晓...",
@@ -61,6 +61,7 @@
     "t25": "”为创新和改变贡献出自己的力量",
     "t26": "奖励",
     "t27": "暂无",
-    "t28": "赛事详情"
+    "t28": "赛事详情",
+    "t29": "核心赞助商"
   }
 }
