优化英文说明

--- a/src/app/i18n/locales/en/translation.json
+++ b/src/app/i18n/locales/en/translation.json
@@ -35,8 +35,8 @@
   },
   "campaign": {
     "t1": "Join / Create Team",
-    "t2": "Team information and project submission will be submitted on",
-    "t3": "open",
+    "t2": "TEAM INFORMATION AND PROJECT SUBMISSION WILL BE OPENED ON",
+    "t3": "",
     "t4": "Register Now",
     "t5": "Introduction",
     "t6": "Join our TG group",
