调优赛事类型显示逻辑

--- a/src/app/i18n/locales/en/translation.json
+++ b/src/app/i18n/locales/en/translation.json
@@ -62,6 +62,7 @@
     "t26": "Rewards",
     "t27": "None",
     "t28": "Event Details",
-    "t29": "Core Sponsor"
+    "t29": "Core Sponsor",
+    "t30": "ONLINE"
   }
 }
