--- a/src/app/i18n/locales/en/translation.json
+++ b/src/app/i18n/locales/en/translation.json
@@ -35,7 +35,7 @@
   },
   "campaign": {
     "t1": "Join / Create Team",
-    "t2": "TEAM INFORMATION AND PROJECT SUBMISSION WILL BE OPENED ON",
+    "t2": "TEAM INFORMATION AND PROJECT SUBMISSION WILL BE OPEN ON",
     "t3": "",
     "t4": "Register Now",
     "t5": "Introduction",
