--- a/src/app/i18n/locales/zh/translation.json
+++ b/src/app/i18n/locales/zh/translation.json
@@ -1,8 +1,22 @@
 {
   "bewater": "若水",
+  "dot": "。",
   "title": "若水 - 我创造故我在",
   "blog": {
     "text": ""
+  },
+  "header": {
+    "campaign": "赛事"
+  },
+  "footer": {
+    "dot": " -",
+    "right": "版权所有。"
+  },
+  "stage": {
+    "Introduction": "赛事介绍",
+    "Teams": "参赛队伍",
+    "Projects": "所有项目",
+    "Result": "比赛结果"
   },
   "cryptoArt": {
     "t1": "赛事合作伙伴",
