feat:menu bar文字多语言;chore:升级npm模块

--- a/src/app/i18n/locales/en/translation.json
+++ b/src/app/i18n/locales/en/translation.json
@@ -4,6 +4,15 @@
   "blog": {
     "text": ""
   },
+  "header": {
+    "campaign": "Campaigns"
+  },
+  "stage": {
+    "Introduction": "Introduction",
+    "Teams": "Teams",
+    "Projects": "Projects",
+    "Result": "Result"
+  },
   "cryptoArt": {
     "t1": "Event Partners",
     "t2": "Co-hosts",
