--- a/src/app/i18n/locales/en/translation.json
+++ b/src/app/i18n/locales/en/translation.json
@@ -1,11 +1,16 @@
 {
   "bewater": "BeWater",
+  "dot": ".",
   "title": "BeWater - I Build Therefore I Am",
   "blog": {
     "text": ""
   },
   "header": {
     "campaign": "Campaigns"
+  },
+  "footer": {
+    "dot": ".",
+    "right": "All Rights Reserved."
   },
   "stage": {
     "Introduction": "Introduction",
