refactor:多语言语法;style:

--- a/src/app/i18n/locales/en/translation.json
+++ b/src/app/i18n/locales/en/translation.json
@@ -71,8 +71,8 @@
     "t21": "Core Sponsor",
     "t22": "Secondary Sponsor",
     "t23": "Tier 3 Sponsor",
-    "t24": "Sign up now for ",
-    "t25": " and contribute to innovation and change",
+    "t24": "Sign up now for {{title}} and contribute to innovation and change",
+    "t25": "",
     "t26": "Rewards",
     "t27": "None",
     "t28": "Event Details",
