--- a/src/app/i18n/locales/zh/translation.json
+++ b/src/app/i18n/locales/zh/translation.json
@@ -71,8 +71,8 @@
     "t21": "核心赞助方",
     "t22": "二级赞助方",
     "t23": "三级赞助方",
-    "t24": "现在报名“",
-    "t25": "”为创新和改变贡献出自己的力量",
+    "t24": "现在报名“{{title}}”为创新和改变贡献出自己的力量",
+    "t25": "",
     "t26": "奖励",
     "t27": "暂无",
     "t28": "赛事详情",
