chore:几处文案修改

--- a/src/app/i18n/locales/en/translation.json
+++ b/src/app/i18n/locales/en/translation.json
@@ -68,15 +68,14 @@
     "t18": "Join",
     "t19": "Rewards",
     "t20": "Join our DC channel",
-    "t21": "Core Sponsor",
-    "t22": "Secondary Sponsor",
-    "t23": "Tier 3 Sponsor",
+    "t22": "Secondary Sponsors",
+    "t23": "Tier 3 Sponsors",
     "t24": "Sign up now for {{title}} and contribute to innovation and change",
     "t25": "",
     "t26": "Rewards",
     "t27": "None",
     "t28": "Event Details",
-    "t29": "Core Sponsor",
+    "t29": "Core Sponsors",
     "t30": "ONLINE"
   }
 }
