feat:agenda venue标题支持中英文显示

--- a/src/app/i18n/locales/en/translation.json
+++ b/src/app/i18n/locales/en/translation.json
@@ -76,6 +76,8 @@
     "t27": "None",
     "t28": "Event Details",
     "t29": "Core Sponsors",
-    "t30": "ONLINE"
+    "t30": "ONLINE",
+    "agenda": "Agenda",
+    "venue": "Event Venue"
   }
 }
