--- a/src/app/i18n/locales/zh/translation.json
+++ b/src/app/i18n/locales/zh/translation.json
@@ -76,6 +76,8 @@
     "t27": "暂无",
     "t28": "赛事详情",
     "t29": "核心赞助商",
-    "t30": "线上赛事"
+    "t30": "线上赛事",
+    "agenda": "议程",
+    "venue": "活动场地"
   }
 }
