feat:二维码展示

--- a/src/app/i18n/locales/en/translation.json
+++ b/src/app/i18n/locales/en/translation.json
@@ -78,6 +78,7 @@
     "t29": "Core Sponsors",
     "t30": "ONLINE",
     "agenda": "Agenda",
-    "venue": "Event Venue"
+    "venue": "Event Venue",
+    "t31": "Scan QR code to join {{name}} group chat"
   }
 }
