--- a/src/app/i18n/locales/zh/translation.json
+++ b/src/app/i18n/locales/zh/translation.json
@@ -78,6 +78,7 @@
     "t29": "核心赞助商",
     "t30": "线上赛事",
     "agenda": "议程",
-    "venue": "活动场地"
+    "venue": "活动场地",
+    "t31": "扫码加小助手，进入“{{name}}”微信群"
   }
 }
