--- a/src/app/i18n/locales/zh/translation.json
+++ b/src/app/i18n/locales/zh/translation.json
@@ -79,6 +79,7 @@
     "t30": "线上赛事",
     "agenda": "议程",
     "venue": "活动场地",
-    "t31": "扫码加小助手，进入“{{name}}”微信群"
+    "t31": "扫码加小助手，进入“{{name}}”微信群",
+    "t32": "赛道"
   }
 }
