Update translation for header menu items

--- a/src/app/i18n/locales/en/translation.json
+++ b/src/app/i18n/locales/en/translation.json
@@ -6,7 +6,8 @@
     "text": ""
   },
   "header": {
-    "campaign": "Campaigns"
+    "campaign": "Campaigns",
+    "project": "Projects"
   },
   "footer": {
     "dot": ".",
