--- a/src/app/i18n/locales/zh/translation.json
+++ b/src/app/i18n/locales/zh/translation.json
@@ -6,7 +6,8 @@
     "text": ""
   },
   "header": {
-    "campaign": "赛事"
+    "campaign": "赛事",
+    "project": "项目"
   },
   "footer": {
     "dot": " -",
