feat: Add language parameter to ProjectList component in project page,resolve #400

--- a/src/app/i18n/locales/en/translation.json
+++ b/src/app/i18n/locales/en/translation.json
@@ -82,5 +82,9 @@
     "venue": "Event Venue",
     "t31": "Scan QR code to join {{name}} group chat",
     "t32": "Tracks"
+  },
+  "common": {
+    "load_more": "Load More",
+    "loading": "Loading..."
   }
 }
