--- a/src/app/i18n/locales/zh/translation.json
+++ b/src/app/i18n/locales/zh/translation.json
@@ -82,5 +82,9 @@
     "venue": "活动场地",
     "t31": "扫码加小助手，进入“{{name}}”微信群",
     "t32": "赛道"
+  },
+  "common": {
+    "load_more": "加载更多",
+    "loading": "加载中..."
   }
 }
