--- a/src/app/i18n/locales/zh/translation.json
+++ b/src/app/i18n/locales/zh/translation.json
@@ -81,7 +81,8 @@
     "agenda": "议程",
     "venue": "活动场地",
     "t31": "扫码加小助手，进入“{{name}}”微信群",
-    "t32": "赛道"
+    "t32": "赛道",
+    "submit": "提交"
   },
   "common": {
     "load_more": "加载更多",
