chore: Update translation for submit button in challenge hero component

--- a/src/app/i18n/locales/en/translation.json
+++ b/src/app/i18n/locales/en/translation.json
@@ -86,6 +86,7 @@
   },
   "common": {
     "load_more": "Load More",
-    "loading": "Loading..."
+    "loading": "Loading...",
+    "no_more": "Loaded all"
   }
 }
