--- a/src/app/i18n/locales/zh/translation.json
+++ b/src/app/i18n/locales/zh/translation.json
@@ -7,7 +7,8 @@
   },
   "header": {
     "campaign": "赛事",
-    "project": "项目"
+    "project": "项目",
+    "builderboard": "排行榜"
   },
   "footer": {
     "dot": " -",
@@ -30,7 +31,7 @@
     "t8": "展示你的幽默和创意，不限定主题，推荐主题包括 “韭菜的自我修养”、“行走在熊市”、基于 DeBox 四款 NFT 企鹅、小鹰、小蛇、小兔子相关的萌物生活、DeBox 与影视作品相关段子，例如 DeBox 赌神、梭哈等。",
     "t9": "我们建议参赛选手以组为单位制作表情包，一组约含4个表情包，越多越好。手工而非 AI 制作的表情包将额外加分哦！",
     "t10": "展示你的个性和风格，不限主题，推荐主题包括 “DeBox 四款 NFT 的 PFP 重构”、“下一款蓝筹 PFP”、“社交类 PFP的形象”。手工而非 AI 制作的 PFP 将获得额外加分。",
-    "t11": "设计师提交 PFP 时，需要提交至少 4 个同系列的 PFP，并提供相应拆解的组件。同时，我们希望你能为每个PFP提供相关的世界观、故事以及创作过程中的插曲故事，通过文字故事与 PFP 艺术结合，赋予 PFP 作品更多的内涵意义。",
+    "t11": "设计师提交 PFP 时，需要提交至少 4 个同系列的 PFP，并提供相应拆解的组件。时，我们希望你能为每个PFP提供相关的世界观、故事以及创作过程中的插曲故事，通过文字故事与 PFP 艺术结合，赋予 PFP 作品更多的内涵意义。",
     "t12": "分形艺术的介绍请参考这里 https://zh.wikipedia.org/zh-tw/分形",
     "t13": "必须借助程序生成，我们鼓励艺术家们和程序员进行合作，通过程序生成令人惊叹的艺术作品，探索分形艺术的魅力。",
     "t14": "像素风",
@@ -61,7 +62,7 @@
     "t10": "参赛要求",
     "t11": "评审维度",
     "t12": "对赛事感兴趣？快组建你的梦幻团队加入我们",
-    "t13": "现在加入 BeWater，为创新和改变贡献出自己的力量",
+    "t13": "现在加入 BeWater，为创新和改变贡献自己的力量",
     "t14": "现在报名中国首届 Starknet Workshop，为创新和改变贡献出自己的力量",
     "t15": "已有近 25000 名预注册的开发者和设计师领取了 BeWater 早鸟徽章",
     "t16": "Workshop 名额有限，先到先得",
@@ -88,5 +89,9 @@
     "load_more": "加载更多",
     "loading": "加载中...",
     "no_more": "已经到底了"
+  },
+  "builderboard": {
+    "title": "BeWater 开发者排行榜",
+    "contributions": "贡献"
   }
 }
